# token-deck

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: AUTO_UPDATE_RELEASE.md  DEVICE_SETTINGS_SYNC.md  GEMINI_SETUP.md  SYNC_AND_PROVIDER_SETUP.md
scripts/: validate-release-config.ps1  validate-release-config.test.ps1  validate-release-workflow.test.ps1
src/: App.test.tsx  App.tsx  main.tsx  styles.css  theme.test.ts  theme.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: device_inventory.rs  lib.rs  main.rs  native_integration.rs
src/components/: DeviceInventoryPanel.test.tsx  DeviceInventoryPanel.tsx  Icon.tsx  MiniDashboard.test.ts  MiniDashboard.test.tsx  MiniDashboard.tsx  OnboardingScreen.test.tsx  OnboardingScreen.tsx  ProjectNameEditor.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  UsageChart.test.tsx  UsageChart.tsx  chart-data.test.ts  chart-data.ts  dashboard-usage.test.ts  dashboard-usage.ts  onboarding-state.test.ts  onboarding-state.ts  quota-display.test.ts  quota-display.ts
src/core/: account-usage.test.ts  account-usage.ts  aggregate.ts  claude.ts  codex.ts  collect.test.ts  collect.ts  collectors.test.ts  gemini.ts  index.ts  parse-utils.ts  project-display.test.ts  project-display.ts  project-identity.test.ts  project-identity.ts  types.ts  usage-windows.ts
src/hooks/: useAppRuntime.test.ts  useAppRuntime.ts  useAutoUpdater.test.ts  useAutoUpdater.ts  useLocalUsage.test.ts  useLocalUsage.ts  useNativeSettings.ts  useProviderQuotas.test.ts  useProviderQuotas.ts
src/platform/: deep-link.test.ts  deep-link.ts  device-inventory.ts  external-browser.ts  native.test.ts  native.ts  tauri.test.ts  tauri.ts  update-prompt.test.ts  update-prompt.ts  window-mode.test.ts  window-mode.ts
src/services/: core-adapter.test.ts  core-adapter.ts  (+8 more)
(+15 files in other folders)
