[package]
name = "token-deck"
version = "0.1.0"
description = "Codex, Claude, Gemini 토큰 사용량 통합 대시보드"
authors = ["Token Deck"]
edition = "2021"

[lib]
name = "token_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
keyring = "4.1.4"
